Atualização meu curriculo

--- a/Meu_curriculo.html
+++ b/Meu_curriculo.html
@@ -16,19 +16,20 @@
             <p>DESENVOLVEDORA FULL STACK JR</p>
 
             <br>
-            <p>Tecnologa em Radiologia, buscando transição para a carreira de desenvolvimento de software. 
-            Tenho conhecimentos em Lógica de programação, HTML, CSS, e JavaScript</p>
+            <p>Tecnologa em Radiologia, buscando transição para a carreira de desenvolvimento de software. Aplicada em desenvolvimento com JavaScript. Através de Bootcamps e projetos pessoais adquiri conhecimentos em HTML e CSS, além de conhecimentos iniciais em Git e Github.
+            </p>
 
             <h2>Habilidades e competências</h2>
-                <p>Inglês<p>
-                <p>Vontade de aprender<p>
+                <p>Dedicação, disposição e pró-atividade<p>
                 <p>Habilidade de trabalhar em equipe<p>
                 <p>Curiosa e Observadora</p>
+                <p>Sempre aberta a novos desafios</p>
             
             <h2>Contato</h2>
            <p>São Paulo</p>
-           <a href="https://api.whatsapp.com/send?phone=5543996180311" target="_blank">11 973643300</a></p>
+           <a href="https://api.whatsapp.com/send?phone=5511973643300" target="_blank">11 973643300</a></p>
            <a href= "https://github.com/Thatiane-Lima" target="_blank">github.com/Thatiane-Lima</a>
+           <a href= "https://www.linkedin.com/in/thatiane-silvia-coelho-de-lima-36205a163/" target="_blank">www.linkedin.com/in/thatiane-de-lima</a>
 
         </section>
 
@@ -37,24 +38,27 @@
             <h4>Salomão Zoppi Diagnósticos (2018 - presente)</h4>
             <p>Tecnologa em Radiologia responsável pela análise de indicadores relacionados ao setor de Radiodiagnóstico. Atualmente contribuo com o time de Tecnologia para a implantação de um novo sistema de gerenciamento de fluxo de pacientes e exames.</p>
             
-            <br>
 
             <h2>Histórico Educacional</h2>
             <br>
             <h4>Faculdade Santa Marcelina </h4>
             <p>Tecnologia em Radiologia - Conclusão em 2016</p>
+
+            <h2>Projetos Realizados</h2>
             <br>
+
             <h4>Desenvolve 2022</h4>
-            <p>Curso de formação Full Stack - Conclusão em Out/2022</p>
-            <br>
+            <p>Formação Full Stack</p>
+            <h4>Impulso Fullstack Web Developer</h4>
+            <p>Formação Full Stack</p>
+            <h4>Banco Carrefour - Woman Developer</h4>
+            <p>Formação em .NET</p>
             <h4> Kenzie Academy</h4>
-            <p>3ª edição do "Elas Codam" - Conclusão em Jan/2022</p>
-            <br>
+            <p>3ª edição do "Elas Codam"</p>
+
+
             <h2>Interesses e Hobbies</h2>
-            <p>Interesse nas áreas de processamento de dados e tecnologia</p>
-            <p>Gosto de aprender coisas novas</p>
-            <p>Adoro viajar</p>
-            <p>Apaixonada por animais</p>
+            <p>Sonho em realizar minha transição de carreira para a área da tecnologia e fazer deste vasto mundo de conhecimentos e conexões meu novo estilo de vida. Fora do âmbito da técnologia tenho como objetivos me dedicar ao estudo da música. Amo animais e adoro viajar tendo a possibilidade de conhecer novos locais e culturas.</p>
         </section>
     </main>
 
